# MyTesting

./: CMakeLists.txt  Test Results - ToDoTest.html
GTest/: CMakeLists.txt  GTest.in.cmake
GTest/googletest-build/: CTestTestfile.cmake  Makefile  cmake_install.cmake  googletest-distribution.cbp
GTest/googletest-build/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gmock.cbp
GTest/googletest-build/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gtest.cbp
GTest/googletest-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
GTest/googletest-download/googletest-prefix/tmp/: googletest-gitclone.cmake  googletest-gitupdate.cmake
Tasks/: CMakeLists.txt  main.cpp
Tasks/LetCode/: CMakeLists.txt
Tasks/LetCode/DepthFirstSearch/: CMakeLists.txt
Tasks/LetCode/DepthFirstSearch/SameTree/: CMakeLists.txt
Tasks/LetCode/DepthFirstSearch/SameTree/SameTreeCore/: CMakeLists.txt  SameTreeCore.cpp  SameTreeCore.h
Tasks/LetCode/DepthFirstSearch/SameTree/SameTreeTest/: CMakeLists.txt  SameTreeUnitTest.cc
Tasks/academicwork/: problem_A.cpp  problem_B.h  problem_C_solved.cpp  problem_C_solved_1.cpp  problem_C_solved_tmp.cpp  templates.cpp  templates.h
ToDo/: CMakeLists.txt  main.cc
ToDo/ToDoCore/: CMakeLists.txt  ToDo.cc  ToDo.h
ToDo/ToDoTest/: CMakeLists.txt  ToDoUnitTest.cc
Tutorials/: CMakeLists.txt  main.cpp
Tutorials/ToDo/: CMakeLists.txt  ToDo.cc
Tutorials/ToDo/ToDoCore/: CMakeLists.txt  ToDoCore.cc
Tutorials/ToDo/ToDoTest/: CMakeLists.txt
academicwork/: CMakeLists.txt  main.cpp  problem_A.h  problem_B.cpp  problem_C.cpp  problem_C.h  problem_C_solved_1_tmp.cpp  std_vector_2d.cpp  std_vector_2d.h
